# learn-ai

./: .gitignore
agentic-ai/1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  app.py
agentic-ai/1_foundations/me/: summary.txt
agentic-ai/2_openai/: 1_lab1.ipynb  2_lab2.ipynb
agentic-ai/3_crew/debate/output/: decide.md  oppose.md  propose.md
langgraph/01_introduction/: react-agent-basics.py
langgraph/02_basic_reflection_agent/: basics.py  chains.py
langgraph/3_structured_outputs/: types.ipynb
langgraph/4_reflexion_agent_system/: execute_tools.py  reflexion_graph.py
projects/crew-ai-engineering-team/: README.md
projects/crew-ai-engineering-team/backend/: .env.example  pyproject.toml
projects/crew-ai-engineering-team/backend/src/engineering_team/: api.py  crew.py  main.py  models.py
projects/crew-ai-engineering-team/backend/src/engineering_team/config/: agents.yaml  tasks.yaml
projects/crew-ai-engineering-team/frontend/: package-lock.json  package.json
projects/crew-ai-engineering-team/frontend/src/app/: globals.css  layout.tsx  page.tsx
projects/crew-ai-engineering-team/frontend/src/app/project/[id]/: page.tsx
projects/crew-ai-engineering-team/frontend/src/components/: agent-timeline.tsx  header.tsx  output-viewer.tsx  project-form.tsx  theme-toggle.tsx
projects/crew-ai-engineering-team/frontend/src/lib/: api.ts  types.ts
